--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                     <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
                 </ul>
             </div>
         </div>
