people updated again

--- a/people.html
+++ b/people.html
@@ -42,7 +42,24 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Dr. John Doe</h5>
+                        <p class="card-text"><strong>Email:</strong> johndoe@example.com</p>
+                        <p class="card-text"><strong>Research:</strong> Plasma Physics & Particle Acceleration</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Dr. John Doe</h5>
+                        <p class="card-text"><strong>Email:</strong> johndoe@example.com</p>
+                        <p class="card-text"><strong>Research:</strong> Plasma Physics & Particle Acceleration</p>
+                    </div>
+                </div>
+            </div>
             <!-- More members can be added similarly -->
         </div>
     </div>
