--- a/people.html
+++ b/people.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Publications - Your Name</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>People - Your Name</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+</head>
 <body>
-    <!-- Navbar -->
+
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -28,49 +28,62 @@
             </div>
         </div>
     </nav>
-    
+
+    <!-- Header (Add Background Like Research Page) -->
+    <header class="bg-primary text-white text-center py-5">
+        <div class="container">
+            <h1>Our Research Team</h1>
+            <p class="lead">Meet the brilliant minds behind our research</p>
+        </div>
+    </header>
+
     <!-- People Section -->
-    <div class="container mt-5">
-        <h2 class="text-center mb-4">Our Research Team</h2>
+    <div class="container my-5">
+        <h2 class="text-center mb-4">Team Members</h2>
         <div class="row">
             <!-- Example Member -->
             <div class="col-md-4 mb-4">
-                <div class="card shadow-sm">
-                    <div class="card-body">
+                <div class="card shadow">
+                    <img src="profile1.jpg" class="card-img-top" alt="Dr. John Doe">
+                    <div class="card-body text-center">
                         <h5 class="card-title">Dr. John Doe</h5>
-                        <p class="card-text"><strong>Email:</strong> johndoe@example.com</p>
                         <p class="card-text"><strong>Research:</strong> Plasma Physics & Particle Acceleration</p>
+                        <a href="mailto:johndoe@example.com" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
+            
             <div class="col-md-4 mb-4">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Dr. John Doe</h5>
-                        <p class="card-text"><strong>Email:</strong> johndoe@example.com</p>
-                        <p class="card-text"><strong>Research:</strong> Plasma Physics & Particle Acceleration</p>
+                <div class="card shadow">
+                    <img src="profile2.jpg" class="card-img-top" alt="Dr. Jane Doe">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Dr. Jane Doe</h5>
+                        <p class="card-text"><strong>Research:</strong> Computational Electromagnetics</p>
+                        <a href="mailto:jane@example.com" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
+
             <div class="col-md-4 mb-4">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Dr. John Doe</h5>
-                        <p class="card-text"><strong>Email:</strong> johndoe@example.com</p>
-                        <p class="card-text"><strong>Research:</strong> Plasma Physics & Particle Acceleration</p>
+                <div class="card shadow">
+                    <img src="profile3.jpg" class="card-img-top" alt="Dr. Alice Smith">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Dr. Alice Smith</h5>
+                        <p class="card-text"><strong>Research:</strong> High-Energy Particle Simulations</p>
+                        <a href="mailto:alice@example.com" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
-            <!-- More members can be added similarly -->
         </div>
     </div>
 
-        <!-- Footer -->
+    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 Your Name. All Rights Reserved.</p>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
