people updated again

--- a/people.html
+++ b/people.html
@@ -33,7 +33,7 @@
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
             <h1>Our Research Team</h1>
-            <p class="lead">Meet the brilliant minds behind our research</p>
+            <p class="lead">Meet the minds behind our research</p>
         </div>
     </header>
 
