Update index.html and styles.css with maroon, white, black color scheme and sidebar navigation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <!-- Navigation Bar -->
+    <!-- Navigation Bar
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">Your Name</a>
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section 
     <header class="hero-section text-center text-white">
         <div class="container">
             <h1>Welcome to My Academic Website</h1>
@@ -38,7 +38,7 @@
     </header>
     
 
-    <!-- About Me Section -->
+    <!-- About Me Section 
     <section class="container my-5">
         <div class="row">
             <div class="col-md-4">
@@ -52,7 +52,7 @@
         </div>
     </section>
 
-    <!-- Research Highlights -->
+    <!-- Research Highlights 
     <section class="bg-light py-5">
         <div class="container">
             <h2 class="text-center">Research Highlights</h2>
@@ -91,7 +91,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer 
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 Your Name. All Rights Reserved.</p>
     </footer>
@@ -115,5 +115,59 @@
 </script>
     
 
-</html>
+</html> -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Academic Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="sidebar">
+            <a href="#home">Home</a>
+            <a href="#research">Research</a>
+            <a href="#publications">Publications</a>
+            <a href="#contact">Contact</a>
+            <a href="#people">People</a>
+        </div>
+        <div class="content">
+            <header>
+                <h1>Your Name</h1>
+                <p>Physicist | Researcher | PhD Scholar at IIT Roorkee</p>
+            </header>
+            <div class="about">
+                <h2>About Me</h2>
+                <p>Hello! I am Your Name, currently working on [your research topic]. My research focuses on [brief research summary].</p>
+                <a href="#publications">View My Publications</a>
+            </div>
+            <div class="research">
+                <h2>Research Highlights</h2>
+                <div class="research-grid">
+                    <div class="research-item">
+                        <h3>Project Title 1</h3>
+                        <p>Brief description of your research project.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                    <div class="research-item">
+                        <h3>Project Title 2</h3>
+                        <p>Brief description of your research project.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                    <div class="research-item">
+                        <h3>Project Title 3</h3>
+                        <p>Brief description of your research project.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <footer>
+                <p>© 2025 Your Name. All Rights Reserved.</p>
+            </footer>
+        </div>
+    </div>
+</body>
+</html>
