--- a/index.html
+++ b/index.html
@@ -7,48 +7,40 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="top-section">
+        <img src="university-logo.png" alt="University Logo" class="university-logo">
+        <h1>Indian Institute of Technology Roorkee</h1>
+    </div>
     <div class="container">
         <div class="sidebar">
             <a href="#home">Home</a>
-            <a href="#research">Research</a>
+            <a href="#research">Research Areas</a>
+            <a href="#people">Team Members</a>
             <a href="#publications">Publications</a>
-            <a href="#contact">Contact</a>
-            <a href="#people">People</a>
+            <a href="#department">Department of Physics</a>
         </div>
         <div class="content">
-            <header>
-                <h1>Your Name</h1>
-                <p>Physicist | Researcher | PhD Scholar at IIT Roorkee</p>
-            </header>
-            <div class="about">
-                <h2>About Me</h2>
-                <p>Hello! I am Your Name, currently working on [your research topic]. My research focuses on [brief research summary].</p>
-                <a href="#publications">View My Publications</a>
+            <div class="intro">
+                <h2>Welcome to My Academic Website</h2>
+                <p>Hello! I am Your Name, a Physicist and Researcher at IIT Roorkee. My work focuses on [your research topic]. This website provides an overview of my research, team, publications, and contact information. Explore the sections to learn more about my contributions to the field of physics.</p>
             </div>
-            <div class="research">
-                <h2>Research Highlights</h2>
-                <div class="research-grid">
-                    <div class="research-item">
-                        <h3>Project Title 1</h3>
-                        <p>Brief description of your research project.</p>
-                        <a href="#">Read More</a>
-                    </div>
-                    <div class="research-item">
-                        <h3>Project Title 2</h3>
-                        <p>Brief description of your research project.</p>
-                        <a href="#">Read More</a>
-                    </div>
-                    <div class="research-item">
-                        <h3>Project Title 3</h3>
-                        <p>Brief description of your research project.</p>
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
+        </div>
+        <div class="right-sidebar">
+            <img src="portrait.png" alt="Your Portrait" class="portrait">
+            <div class="contact-details">
+                <h3>Contact Information</h3>
+                <p><strong>Your Name, Ph.D.</strong></p>
+                <p>Department of Physics</p>
+                <p>Indian Institute of Technology Roorkee</p>
+                <p>Roorkee, Uttarakhand 247667, India</p>
+                <p>Phone: [Your Phone Number]</p>
+                <p>Email: [your.email@iitr.ac.in]</p>
+                <p>Homepage: <a href="https://www.iitr.ac.in">www.iitr.ac.in</a></p>
             </div>
-            <footer>
-                <p>© 2025 Your Name. All Rights Reserved.</p>
-            </footer>
         </div>
     </div>
+    <footer>
+        <p>© 2025 Your Name. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
