--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="top-section">
-        <img src="university-logo.png" alt="University Logo" class="university-logo">
+        <img src="iitr_logo.png" alt="University Logo" class="university-logo">
         <h1>Indian Institute of Technology Roorkee</h1>
     </div>
     <div class="container">
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="right-sidebar">
-            <img src="portrait.png" alt="Your Portrait" class="portrait">
+            <img src="portrait.jpeg" alt="Your Portrait" class="portrait">
             <div class="contact-details">
                 <h3>Contact Information</h3>
                 <p><strong>Your Name, Ph.D.</strong></p>
