--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="top-section">
         <img src="iitr_logo.png" alt="University Logo" class="university-logo">
-        <h1>Indian Institute of Technology Roorkee</h1>
+        <img src="IITR_THOMSON.png" alt="Banner Image" class="top-banner">
     </div>
     <div class="container">
         <div class="sidebar">
