added pic for banner

--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
         <div class="right-sidebar">
             <img src="portrait.jpeg" alt="Your Portrait" class="portrait">
             <div class="contact-details">
-                <h3>Contact Information</h3>
-                <p><strong>Your Name, Ph.D.</strong></p>
+                <p><strong>Prof. Puneet Jain</strong></p>
                 <p>Department of Physics</p>
                 <p>Indian Institute of Technology Roorkee</p>
                 <p>Roorkee, Uttarakhand 247667, India</p>
-                <p>Phone: [Your Phone Number]</p>
-                <p>Email: [your.email@iitr.ac.in]</p>
-                <p>Homepage: <a href="https://www.iitr.ac.in">www.iitr.ac.in</a></p>
+                <p>Phone: (91) 9368932927</p>
+                <p>Email: puneet.jain@ph.iitr.ac.in</p>
+                <p>Homepage: <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
             </div>
         </div>
     </div>
