--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="top-section">
-        <img src="iitr_logo.png" alt="University Logo" class="university-logo">
-        <img src="IITR_THOMSON_test.png" alt="Banner Image" class="top-banner">
-    </div>
-    <div class="container">
-        <div class="sidebar">
-            <a href="#home">Home</a>
-            <a href="#research">Research Areas</a>
-            <a href="#people">Team Members</a>
-            <a href="#publications">Publications</a>
-            <a href="#department">Department of Physics</a>
+    <div class="page-wrapper">
+        <div class="top-section">
+            <img src="iitr_logo.png" alt="University Logo" class="university-logo">
+            <img src="IITR_THOMSON_test.png" alt="Banner Image" class="top-banner">
         </div>
-        <div class="content">
-            <div class="intro">
-                <h2>Welcome to My Academic Website</h2>
-                <p>Hello! I am Your Name, a Physicist and Researcher at IIT Roorkee. My work focuses on [your research topic]. This website provides an overview of my research, team, publications, and contact information. Explore the sections to learn more about my contributions to the field of physics.</p>
+        <div class="container">
+            <div class="sidebar">
+                <a href="#home">Home</a>
+                <a href="#research">Research Areas</a>
+                <a href="#people">Team Members</a>
+                <a href="#publications">Publications</a>
+                <a href="#department">Department of Physics</a>
             </div>
-        </div>
-        <div class="right-sidebar">
-            <img src="portrait.jpeg" alt="Your Portrait" class="portrait">
-            <div class="contact-details">
-                <p><strong>Prof. Puneet Jain</strong></p>
-                <p>Department of Physics</p>
-                <p>Indian Institute of Technology Roorkee</p>
-                <p>Roorkee, Uttarakhand 247667, India</p>
-                <p>Phone: (91) 9368932927</p>
-                <p>Email: puneet.jain@ph.iitr.ac.in</p>
-                <p>Homepage: <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
+            <div class="content">
+                <div class="intro">
+                    <h2>Welcome</h2>
+                    <p>Hello! I am Your Name, a Physicist and Researcher at IIT Roorkee. My work focuses on [your research topic]. This website provides an overview of my research, team, publications, and contact information. Explore the sections to learn more about my contributions to the field of physics.</p>
+                </div>
+            </div>
+            <div class="right-sidebar">
+                <img src="portrait.jpeg" alt="Your Portrait" class="portrait">
+                <div class="contact-details">
+                    <p><strong>Prof. Puneet Jain</strong></p>
+                    <p>Department of Physics</p>
+                    <p>Indian Institute of Technology Roorkee</p>
+                    <p>Roorkee, Uttarakhand 247667, India</p>
+                    <p>Phone: (91) 9368932927</p>
+                    <p>Email: puneet.jain@ph.iitr.ac.in</p>
+                    <p>Homepage: <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
+                </div>
             </div>
         </div>
     </div>
