--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page-wrapper">
         <div class="top-section">
             <img src="iitr_logo.png" alt="University Logo" class="university-logo">
-            <img src="IITR_THOMSON_test.png" alt="Banner Image" class="top-banner">
+            <!-- <img src="IITR_THOMSON_test.png" alt="Banner Image" class="top-banner"> -->
         </div>
         <div class="container">
             <div class="sidebar">
