--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#research">Research Areas</a>
                 <a href="#people">Team Members</a>
                 <a href="#publications">Publications</a>
-                <a href="#department">Department of Physics</a>
+                <a href="https://ph.iitr.ac.in/">Department of Physics</a>
             </div>
             <div class="content">
                 <div class="intro">
