--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,6 @@
     <div class="page-wrapper">
         <div class="top-section">
             <img src="iitr_logo.png" alt="University Logo" class="university-logo">
-            <!-- <img src="IITR_THOMSON_test.png" alt="Banner Image" class="top-banner"> -->
         </div>
         <div class="container">
             <div class="sidebar">
@@ -41,6 +40,67 @@
         </div>
         <footer>
             <p>© 2025 Your Name. All Rights Reserved.</p>
+        </footer>
+    </div>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prof. Puneet Jain - Academic Website</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+    <div class="page-wrapper">
+        <header class="top-section">
+            <div class="header-content">
+                <img src="iitr_logo.png" alt="IIT Roorkee Logo" class="university-logo">
+                <div class="header-text">
+                    <h1>Prof. Puneet Jain</h1>
+                    <p>Department of Physics, Indian Institute of Technology Roorkee</p>
+                </div>
+            </div>
+        </header>
+
+        <div class="container">
+            <nav class="sidebar">
+                <ul>
+                    <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="#research"><i class="fas fa-flask"></i> Research Areas</a></li>
+                    <li><a href="#people"><i class="fas fa-users"></i> Team Members</a></li>
+                    <li><a href="#publications"><i class="fas fa-book"></i> Publications</a></li>
+                    <li><a href="https://ph.iitr.ac.in/"><i class="fas fa-university"></i> Department</a></li>
+                </ul>
+            </nav>
+
+            <main class="content">
+                <section class="intro">
+                    <h2>Welcome</h2>
+                    <p>Hello! I am Prof. Puneet Jain, a Physicist and Researcher at IIT Roorkee. My work focuses on [your research topic]. This website provides an overview of my research, team, publications, and contact information. Explore the sections to learn more about my contributions to the field of physics.</p>
+                </section>
+            </main>
+
+            <aside class="right-sidebar">
+                <div class="profile-card">
+                    <img src="portrait.jpeg" alt="Prof. Puneet Jain" class="portrait">
+                    <div class="contact-details">
+                        <h3>Contact Information</h3>
+                        <p><i class="fas fa-map-marker-alt"></i> Department of Physics<br>Indian Institute of Technology Roorkee<br>Roorkee, Uttarakhand 247667, India</p>
+                        <p><i class="fas fa-phone"></i> (91) 9368932927</p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:puneet.jain@ph.iitr.ac.in">puneet.jain@ph.iitr.ac.in</a></p>
+                        <p><i class="fas fa-globe"></i> <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
+                    </div>
+                </div>
+            </aside>
+        </div>
+
+        <footer>
+            <p>© 2025 Prof. Puneet Jain. All Rights Reserved.</p>
         </footer>
     </div>
 </body>
