--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <img src="portrait.jpeg" alt="Prof. Puneet Jain" class="portrait">
                     <div class="contact-details">
                         <h3>Contact Information</h3>
-                        <p><i class="fas fa-map-marker-alt"></i> Department of Physics<br>Indian Institute of Technology Roorkee<br>Roorkee, Uttarakhand 247667, India</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Room - 304, Dept. of Physics<br>Indian Institute of Technology Roorkee<br>Roorkee, Uttarakhand 247667, India</p>
                         <p><i class="fas fa-phone"></i> (91) 9368932927</p>
                         <p><i class="fas fa-envelope"></i> <a href="mailto:puneet.jain@ph.iitr.ac.in">puneet.jain@ph.iitr.ac.in</a></p>
                         <p><i class="fas fa-globe"></i> <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
