--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <p class="address">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Room - 304, Dept. of Physics</span>
-                            <span>Indian Institute of Technology Roorkee</span>
+                            <span>IIT Roorkee</span>
                             <span>Roorkee, Uttarakhand 247667, India</span>
                         </p>
                         <p><i class="fas fa-phone"></i> (91) 9368932927</p>
