--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                         <h3>Contact Information</h3>
                         <p class="address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Room - 304, Dept. of Physics</span>
-                            <span>IIT Roorkee</span>
-                            <span>Roorkee, Uttarakhand 247667, India</span>
+                            <span>Room - 304, Dept. of Physics<br>
+                            Indian Institute of Technology Roorkee<br>
+                            Roorkee, Uttarakhand 247667, India</span>
                         </p>
                         <p><i class="fas fa-phone"></i> (91) 9368932927</p>
                         <p><i class="fas fa-envelope"></i> <a href="mailto:puneet.jain@ph.iitr.ac.in">puneet.jain@ph.iitr.ac.in</a></p>
