--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h3>Contact Information</h3>
                         <p class="address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Room - 304, Dept. of Physics<br>
+                            <span>Room - 304, Department of Physics<br>
                             Indian Institute of Technology Roorkee<br>
                             Roorkee, Uttarakhand 247667, India</span>
                         </p>
