--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="header-content">
                 <img src="iitr_logo.png" alt="IIT Roorkee Logo" class="university-logo">
                 <div class="header-text">
-                    <h1>Prof. Puneet Jain</h1>
+                    <h1>Puneet Jain</h1>
                     <p>Department of Physics, Indian Institute of Technology Roorkee</p>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                             Indian Institute of Technology Roorkee<br>
                             Roorkee, Uttarakhand 247667, India</span>
                         </p>
-                        <p><i class="fas fa-phone"></i> (91) 9368932927</p>
+                        <p><i class="fas fa-phone"></i> (91) 1332 284787 </p>
                         <p><i class="fas fa-envelope"></i> <a href="mailto:puneet.jain@ph.iitr.ac.in">puneet.jain@ph.iitr.ac.in</a></p>
                         <p><i class="fas fa-globe"></i> <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
                     </div>
