--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         </div>
 
         <footer>
-            <p>© 2025 Prof. Puneet Jain. All Rights Reserved.</p>
+            <!-- <p>© 2025 Puneet Jain. All Rights Reserved.</p> -->
+            <img src="thomson.jpg" alt="IIT Roorkee main" class="Banner">
         </footer>
     </div>
 </body>
