--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <footer>
             <!-- <p>© 2025 Puneet Jain. All Rights Reserved.</p> -->
-            <img src="thomson.jpg" alt="IIT Roorkee main" class="Banner">
+            <img src="thomson.jpg" alt="IIT Roorkee Campus" class="footer-banner">
         </footer>
     </div>
 </body>
