--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         </div>
 
         <footer>
-            <!-- <p>© 2025 Puneet Jain. All Rights Reserved.</p> -->
-            <img src="IITR_THOMSON_pro.png" alt="IIT Roorkee Campus" class="footer-banner">
+            <p>Department of Physics | Indian Institute of Technology Roorkee | Roorkee, Uttarakhand, 247667, India</p>
+            <p>Phone: (91) 1332-285248</p>
         </footer>
     </div>
 </body>
