--- a/index.html
+++ b/index.html
@@ -105,8 +105,13 @@
         </div>
 
         <footer>
-            <p>Department of Physics | Indian Institute of Technology Roorkee | Roorkee, Uttarakhand, 247667, India</p>
-            <p>Phone: (91) 1332-285248</p>
+            <div class="footer-content">
+                <p class="department-info">
+                    Department of Physics | Indian Institute of Technology Roorkee<br>
+                    Roorkee, Uttarakhand 247667, India
+                </p>
+                <p class="contact-info">Phone: (91) 1332-285248</p>
+            </div>
         </footer>
     </div>
 </body>
