--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
                 <p class="department-info">
                     Department of Physics | Indian Institute of Technology Roorkee<br>
                     Roorkee, Uttarakhand 247667, India
+                    Phone: (91) 1332-285248
                 </p>
-                <p class="contact-info">Phone: (91) 1332-285248</p>
+                <!-- <p class="contact-info">Phone: (91) 1332-285248</p> -->
             </div>
         </footer>
     </div>
