--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
             <div class="footer-content">
                 <p class="department-info">
                     Department of Physics | Indian Institute of Technology Roorkee<br>
-                    Roorkee, Uttarakhand 247667, India
+                    Roorkee, Uttarakhand 247667, India<br>
                     Phone: (91) 1332-285248
                 </p>
-                <!-- <p class="contact-info">Phone: (91) 1332-285248</p> -->
             </div>
         </footer>
     </div>
