--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <main class="content">
                 <section class="intro">
-                    <h2>Welcome</h2>
+                    <h2>Research Group</h2>
                     <p>Hello! I am Prof. Puneet Jain, a Physicist and Researcher at IIT Roorkee. My work focuses on [your research topic]. This website provides an overview of my research, team, publications, and contact information. Explore the sections to learn more about my contributions to the field of physics.</p>
                 </section>
             </main>
