--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="profile-card">
                     <img src="portrait.jpeg" alt="Prof. Puneet Jain" class="portrait">
                     <div class="contact-details">
-                        <h3>Contact Information</h3>
+                        <p class="designation">Assistant Professor</p>
                         <p class="address">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Room - 304, Department of Physics<br>
