--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
                         <p class="address">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Room - 304, Department of Physics<br>
-                            Indian Institute of Technology Roorkee<br>
-                            Roorkee, Uttarakhand 247667, India</span>
+                            IIT Roorkee<br>
+                            Roorkee, 247667, India</span>
                         </p>
                         <p><i class="fas fa-phone"></i> (91) 1332 284787 </p>
                         <p><i class="fas fa-envelope"></i> <a href="mailto:puneet.jain@ph.iitr.ac.in">puneet.jain@ph.iitr.ac.in</a></p>
                         <p><i class="fas fa-globe"></i> <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
+                        <p><i class="fab fa-orcid"></i> <a href="https://orcid.org/your-ORCID-id" target="_blank">ORCID Profile</a></p>
+                        <p><i class="ai ai-google-scholar"></i> <a href="https://scholar.google.com/citations?user=ID" target="_blank">Google Scholar</a></p>
                     </div>
                 </div>
             </aside>
