--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <li><a href="#people"><i class="fas fa-users"></i> Team Members</a></li>
                     <li><a href="#publications"><i class="fas fa-book"></i> Publications</a></li>
                     <li><a href="https://ph.iitr.ac.in/"><i class="fas fa-university"></i> Department</a></li>
+                    <li><a href="#Useful Links"><i class="fas fa-link"></i> Useful Links</a></li>
                 </ul>
             </nav>
 
