--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <img src="portrait.jpeg" alt="Prof. Puneet Jain" class="portrait">
                     <div class="contact-details">
                         <p class="designation">Assistant Professor</p>
-                        <p class="phd-info">PhD: KEK Japan</p>
+                        <p class="phd-info"><i class="fas fa-graduation-cap">PhD - KEK Laboratory Japan</p>
                         <p class="address">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Room - 304, Department of Physics<br>
